data/all_generated_tests/raw_wast_tests/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3100.wast
;; 9. **Test 9: Tail Call Optimization Fails**   Create a scenario where a tail call optimization impacts the return behavior across module boundaries. Check if tail call optimization is equally effective and consistent in both engines.   **Constraint**: Ensure tail call optimizations don't disrupt stack consistency for subsequent returns.   **Relation to Incorrect Handling of Control Flow**: Ensures optimizations don’t result in different outcomes across module calls.

(assert_invalid
  (module
    (func $tail-call-failure (result i32)
      (block $exit 
        (call $other-module-function)
        (return)
        (br $exit)
      )
    )
    (func $other-module-function (result i32)
      (i32.const 0)
    )
  )
  "tail call optimization inconsistency"
)